# chebyshev_sample

./: README.html  README.md  conda_env.txt  pyproject.toml  validation_with_first_order.py  validation_with_nonlinear_1d.py  validation_with_second_order.py
cheby_tools/: cheby1d.py  cheby2d.py
