[tool.poetry]
name = "chebyshev_sample"
version = "0.1.0"
description = ""
authors = ["Takatani, Hideaki <hide.mop@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipython = "^7.21.0"
numpy = "^1.20.1"
scipy = "^1.6.1"
sympy = "^1.7.1"
matplotlib = "^3.3.4"
PyQt5 = "^5.15.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
